Resolved TBA alignment issue

--- a/css/prizes.css
+++ b/css/prizes.css
@@ -40,33 +40,16 @@
   100% { transform: translateX(0%); } 
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
   #prizes-heading {
     font-size: 3rem;
-  }
-  .small-prizes{
-    visibility: visible;
-    text-align: center;
-    margin-left: 0%;
-    margin-right: 0%;
-  }
-  .small-text-prizes{
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-  .bouncing-text-prizes{
-    visibility: hidden;
+    margin-left: 1%;
+    margin-bottom: 12rem;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 900px) {
   #prizes-heading {
-    font-size: 3rem;
-  }
-  .small-prizes{
-    visibility: hidden;
-  }
-  .bouncing-text-prizes{
-    visibility: visible;
+    font-size: 4.5rem;
   }
 }
